BasicVPC.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "classVpc": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "CidrBlock": "10.0.0.0/16",
        "Tags": [
          {
            "Key": "Environment",
            "Value": "Test"
          }
        ]
      }
    },
    "publicSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "classVpc"
        },
        "CidrBlock": "10.0.0.0/24",
        "AvailabilityZone" : "us-east-1a"
      }
    },

    "publicSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "classVpc"
        },
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone" : "us-east-1b"
      }
    },

    "webserverSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "classVpc"
        },
        "GroupDescription": "Allow access from HTTP and SSH traffic",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": {"Ref": "YourIp"}
          }
        ]
      }
    },
    "internetGW": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {}
    },
    "vpcGwAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": {
          "Ref": "internetGW"
        },
        "VpcId": {
          "Ref": "classVpc"
        }
      }
    },
    "publicRT": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "classVpc"
        }
      }
    },
    "publicRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "publicRT"
        },
        "GatewayId": {
          "Ref": "internetGW"
        }
      },
      "DependsOn": [
        "internetGW"
      ]
    },
    "publicSubnet1RTassoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "publicRT"
        },
        "SubnetId": {
          "Ref": "publicSubnet1"
        }
      }
    },
    "publicSubnet2RTassoc": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "publicRT"
        },
        "SubnetId": {
          "Ref": "publicSubnet2"
        }
      }
    }
    "Webserver": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": {
          "Ref": "InstanceType"
        },
        "ImageId": "ami-3ea13f29",
        "NetworkInterfaces": [
          {
            "GroupSet": [
              {
                "Ref": "webserverSG"
              }
            ],
            "AssociatePublicIpAddress": "true",
            "DeviceIndex": "0",
            "DeleteOnTermination": "true",
            "SubnetId": {
              "Ref": "publicSubnet1"
            }
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Web1"
          }
        ]
      },
      "DependsOn": [
        "PublicRoute"
      ]
    },
    "Webserver": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": {
          "Ref": "InstanceType"
        },
        "ImageId": "ami-3ea13f29",
        "NetworkInterfaces": [
          {
            "GroupSet": [
              {
                "Ref": "webserverSG"
              }
            ],
            "AssociatePublicIpAddress": "true",
            "DeviceIndex": "0",
            "DeleteOnTermination": "true",
            "SubnetId": {
              "Ref": "publicSubnet2"
            }
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Web2"
          }
        ]
      },
      "DependsOn": [
        "PublicRoute"
      ]
    },
    {
      "Type" : "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties" : {    
        "IpAddressType" : String,
        "LoadBalancerAttributes" : [ LoadBalancerAttributes, ... ],
        "Name" : String,
        "Scheme" : String,
        "SecurityGroups" : [ String, ... ],
        "SubnetMappings" : [ "publicSubnet1",  ],
        "Subnets" : [ String, ... ],
        "Tags" : [ Resource Tag, ... ],
        "Type" : String
      }
    }  
  },
  "Parameters": {
    "KeyName": {
      "Description": "Name of your EC2 KeyPair to enable SSH access to the instances.",
      "Type": "AWS::EC2::KeyPair::KeyName",
      "ConstraintDescription": "must be the name of an existing EC2 KeyPair."
    },
    "YourIp": {
      "Description": "The current CIDR IP address of your workstation (x.x.x.x/32).",
      "Type": "String"
    }
  }
}
